# verbose-octo-happiness

./: .gitignore  README.md  SECURITY.md  ai_optimizer.py  mining_assistant.py  mining_assistant.py.  pyproject.toml  test_ai_optimizer.py  test_crypto_miner.py
.github/workflows/: python-app.yml
docs/: .gitkeep  HARDWARE_SPEC.md
hardware/: .gitkeep
software/: .gitkeep  assistant.py  audit.py  integrity.py  memory.py  network.py  optimizer.py  paper.py  persona.py  portfolio.py  profile.py  profitability.py  wallet.py  wallet_live.py
tests/: test_assistant.py  test_audit.py  test_integrity.py  test_memory.py  test_network.py  test_optimizer.py  test_paper.py  test_paper_live.py  test_persona.py  test_portfolio.py  test_profile.py  test_profitability.py  test_wallet.py  test_wallet_live.py
ui/: .gitkeep
