[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gold-brick"
version = "0.1.0"
description = "AI-driven cryptocurrency mining profitability tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSL-1.0" }
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools]
packages = ["software"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
